--- a/.env
+++ b/.env
@@ -9,14 +9,13 @@ LISK_SEPOLIA_RPC_URL=https://rpc.sepolia-api.lisk.com
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID=d1b7a5bb31be5efc1f6700f01397ebfe
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="fb99d3ee62d3a50065f0bff6e093c47a"
-
-POSTGRES_URL="postgres://default:4zWHatqEh6Og@ep-white-morning-a4krclie-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:4zWHatqEh6Og@ep-white-morning-a4krclie-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=95"
-POSTGRES_URL_NO_SSL="postgres://default:4zWHatqEh6Og@ep-white-morning-a4krclie-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:4zWHatqEh6Og@ep-white-morning-a4krclie.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_URL="postgres://default:m2KHIOTLQXy1@ep-hidden-bar-a4vf8dmv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:m2KHIOTLQXy1@ep-hidden-bar-a4vf8dmv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=95"
+POSTGRES_URL_NO_SSL="postgres://default:m2KHIOTLQXy1@ep-hidden-bar-a4vf8dmv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:m2KHIOTLQXy1@ep-hidden-bar-a4vf8dmv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_USER="default"
-POSTGRES_HOST="ep-white-morning-a4krclie-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="4zWHatqEh6Og"
+POSTGRES_HOST="ep-hidden-bar-a4vf8dmv-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="m2KHIOTLQXy1"
 POSTGRES_DATABASE="verceldb"
 
 DATABASE_URL="file:./dev.db"
