--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ DATABASE_URL="file:./dev.db"
 
 TOKEN="8075994561:AAEO6hYBXaOdOpCX6p8XDqjzFK4cRZXIJtQ"
 PORT=10000
+WEBHOOK_DOMAIN=https://backend-savvycircle.onrender.com
