--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
+    "ping": "^0.4.4",
     "prisma": "^5.20.0",
     "telegraf": "^4.16.3",
     "viem": "^2.21.16",
