--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ DATABASE_URL="file:./dev.db"
 TOKEN="8075994561:AAEO6hYBXaOdOpCX6p8XDqjzFK4cRZXIJtQ"
 PORT=5700
 WEBHOOK_DOMAIN=https://backend-savvycircle.onrender.com
+
+RENDER_API=rnd_DClu54900JdhkaA3LkBfHdSBXk9e
