--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@prisma/client": "5.20.0",
     "axios": "^1.7.7",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
     "ping": "^0.4.4",
     "prisma": "^5.20.0",
